# continuous-latent-autoencoder

./: .env.example  .gitignore  ADAPTIVE_GAN_HANDOFF.md  ADR_001_RAE_Architecture.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  COMMANDS.md  DATASET_PIPELINE_PLAN.md  EXPERIMENT_GUIDE.md  EXTERNAL_CODE_REFERENCES.md  HISTORICAL_CHANGES.md  LAB_NOTEBOOK.md  Makefile  PROJECT_STATUS.md  README.md  REASONING.md  RESEARCH_REPORT.md  RESEARCH_SUMMARY_2026_04_21.md  REUSE.md  SIMPLIFICATION_PLAN.md  SUPERVISOR_RESEARCH_REPORT.md  TODO.md  TORCHDYNAMO_NOTES.md  UNCERTAINTIES.md  common-voice-bn-test.tsv  config.py  create_test_config.py  data_loading.py  explanation.md  iteration_0.md  losses.py  new-findings-papers.md  pyproject.toml  requirements.txt  schema.py  setup.sh  sweep.yaml  sweep_fast.yaml  (+2 more)
.plans/: README.md  decoder_rae_inspired.md  encoder_zipformer_mhc.md  eval_benchmarks.md  eval_probes.md  gan_adversarial.md  hparams_calm_like.md  multires_stft_loss.md  objective_lejepa.md  scaled_adam.md  sigreg.md  uncertainties_index.md  uncertainties_resolution_with_refs.md
.static-analysis/: DIAGNOSIS.md  import-graph.txt  pyright-clean.txt  pyright.json  pyrightconfig.json  ruff-key.txt  ruff.json  ruff.stderr  ruff.txt  vulture-60.txt  vulture-90.txt  vulture-allowlist.py  vulture-clean.txt  vulture-filtered.txt  vulture.txt
clae_data/: __init__.py  __main__.py  _creds.example.py  audit.py  cli.py  fetch.py  pack.py  publish_checkpoint.py  push.py  registry.py  schema.py  wandb_setup.py
configs/: calm_like_exp0.yaml  exp0.yaml  exp0_20pct.yaml  exp0_20pct_merged.yaml  exp0_test.yaml  exp1_mix.yaml  exp2_latent_noise.yaml  exp3_gan.yaml  exp_3m.yaml  exp_3m_gan.yaml  kaggle_3m_gan.yaml  large_2kh.yaml  large_2kh_packed.yaml  local_13gb.yaml  local_6gb.yaml  smoke_test_wandb.yaml  train_10pct.yaml  train_v1.yaml
data/: augment.py  dataset.py  embed_index.py  mine_unlabeled.py  quality_filter.py  vad_segment.py
demo/: README.md  app.py  requirements.txt
docs/: EXPERIMENT_PLAN_2026_06_10.md  LOG_INTERPRETATION.md  UTTERANCE_SIGREG_NOTES.md
eval/: baselines.py  common.py  eval_age.py  eval_asr.py  eval_asr_attn.py  eval_asr_baselines.py  eval_cls_probe.py  eval_emotion.py  eval_emotion_temporal.py  eval_emotion_transformer.py  eval_gender.py  eval_mimi_recon.py  eval_recon.py  eval_repr_cluster.py  eval_repr_eer.py  eval_repr_umap.py  eval_repr_viz.py  eval_speaker_id.py  eval_speaker_verif.py  extract_embeddings.py  inline_probe.py  render_compact_scorecard.py  repr_bench.py  run_all.py  run_probes.py
losses/: multires_stft.py
models/: autoencoder.py  conformer.py  decoder_generator.py  discriminator.py  discriminators.py  encoder.py  fastconformer.py  frontend_conv.py  mhc.py  predictor.py  projector.py  sigreg.py  visreg.py  zipformer.py  zipformer_scaling.py
optim/: lr_schedulers.py  scaled_adam.py
reference-implementations/: README.md  continuous-audio-language-model-encoder.md  le-wm-REIMPLEMENTATION_NOTES.md  lejepa_minimal_impl.py  lejepa_training_ready.py  mhc_reference_implementation.py  zipformer2_implementation.py
scripts/: RECONSTRUCT.md  audit_datasets.py  check_gan_params.py  check_rank.py  compute_latent_stats.py  count_params.py  create_10pct_manifest.py  debug_nan.py  (+43 more)
(+47 files in other folders)
