[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-latent-autoencoder"
version = "0.0.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26",
  "wandb>=0.16; platform_system != 'Windows'",
  "torch>=2.2",
  "torchaudio>=2.2",
  "soundfile>=0.12",
  "jiwer>=3.0",
  "matplotlib>=3.10.8",
  "scikit-learn>=1.7.2",
  "codecarbon>=3.2.2",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "eval*", "losses*", "models*", "optim*", "utils*"]
exclude = ["icefall*", "RAE*", "lejepa*", "mHC-*", "configs*", "papers*", "paper-summaries*", "scripts*", "runs*"]
