[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-latent-autoencoder"
version = "0.0.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26",
  "wandb>=0.16",
  "torch>=2.2",
  "torchaudio>=2.2",
  "soundfile>=0.12",
  "jiwer>=3.0",
  "matplotlib>=3.10.8",
  "scikit-learn>=1.7.2",
  "codecarbon>=3.2.2",
  "tqdm>=4.66",
  "pandas>=2.3.3",
  "pydantic>=2.5",
  "openpyxl>=3.1.5",
  "datasets>=4.6.1",
  "pyarrow>=23.0.1",
  "librosa>=0.11.0",
  "umap-learn>=0.5.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "eval*", "losses*", "models*", "utils*"]
exclude = ["icefall*", "RAE*", "lejepa*", "mHC-*", "configs*", "papers*", "paper-summaries*", "scripts*", "runs*"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
